--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  width: 30rem;
+}
+
+.card-header {
+  font-size: 2rem;
+  background-color: #ff0000;
+  color: #000;
+}
+
+.card-title {
+  margin-top: 1rem;
+  font-size: 2.2rem;
+  color: #fff;
+}
+
+.card-text {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #ff0000;
+}
+
+.card-body {
+  background-color: #000;
+  color: #fff;
 }
